[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Wojciech Masiarz",email = "wojciech.masiarz@itaka.pl"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
